--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <div>
-      <h1>Lista de Todos</h1>
-      <ul>
-        <li></li>
-      </ul>
+      <h1>Retornando dados do upload</h1>
+      <ul></ul>
     </div>
     <!--<script src="https://unpkg.com/axios/dist/axios.min.js"></script>-->
     <script src="./script.js"></script>
